# openbb_dbnomics

./: .gitignore  DASHBOARD_README.md  README.md  install.py  launch_dbnomics.py  manifest.json  pyproject.toml  pytest.ini  start.sh  start_dashboard.py
openbb_dbnomics/: app.json  dashboard.py  openbb.py  provider.py  router.py
openbb_dbnomics/assets/: reference.json
openbb_dbnomics/models/: example.py
openbb_dbnomics/utils/: providers.py
tests/: README.md  conftest.py  test_dbnomics_client.py  test_integration.py  test_myplot.py  test_router.py
