[tool.poetry]
name = "openbb_dbnomics"
version = "0.0.1"
description = ""
authors = ["Meyrick Chapman <meyrick@hedge-analytics.com>"]
readme = "README.md"
packages = [{ include = "openbb_dbnomics" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
openbb-core = { version = "^1.1.2" }

[tool.poetry.group.dev.dependencies]
openbb-devtools = { version = "^1.0.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
openbb_dbnomics = "openbb_dbnomics.router:router"

[tool.poetry.plugins."openbb_provider_extension"]
openbb_dbnomics = "openbb_dbnomics.provider:provider"

[tool.poetry.plugins."openbb_obbject_extension"]
openbb_dbnomics = "openbb_dbnomics.openbb:app"
